--- a/css/reset.css
+++ b/css/reset.css
@@ -11,6 +11,7 @@ body {
     font-size: 100%;
     font-family: 'Raleway';
     min-height: 100vh;
+    color: #55555A;
 }
 
 ul { list-style: none }
