--- a/css/scss/header.scss
+++ b/css/scss/header.scss
@@ -1,42 +1,38 @@
+// Header Navbar
 .navbar {
-    display: flex;
-    justify-content: space-between;
     align-items: center;
-    width: 100%;
-    padding: 20px 20px;
     background-color: black;
+    display: flex;
+    font-size: 1em;
+    font-style: none;
+    justify-content: space-between;
+    padding: 15px 20px;
     position: fixed;
-    z-index: 5;
+    text-decoration: none;
+    z-index: 4;
+    width: 100%;
 
-    .logo-principal {
-        font-size: 1.2em;
-
-        .logo {
+    .navbar-logo-principal {
+        .navbar-logo {
             color: white;
-            font-style: none;
-            text-decoration: none;
+
             font-weight: 600;
         }
     }
 
-    .active-menu {
-        color: white;
-        font-size: 1.1em;
+    .navbar-menu-ativa {
+        color: #9f9f9f;
 
-        .menu {
-            color: #9f9f9f;
-            font-style: none;
-            text-decoration: none;
+        .navbar-menu {
             font-weight: bold;
-            padding: 0  5px;
-            transition: 0.6s;
+            transition: 0.5s;
 
             &:hover {
-                color: white;
+              color: white;
             }
 
             .fa-bars {
-              padding: 0 5px;
+              padding: 0 10px;
             }
         }
     }
