--- a/css/scss/industrious.scss
+++ b/css/scss/industrious.scss
@@ -1,30 +1,40 @@
-.industrious_banner {
-  width: 100%;
-  height: 650px;
+.industrious {
   background-image: url(../img/cidade.jpg);
   background-size: cover;
+  height: 650px;
+  width: 100%;
 
-    .industrious {
-      background-image: linear-gradient(to bottom right, rgba(203,27,40,.6) 0%, rgba(17,17,17,.9) 74%);
-      display: flex;
-      height: 100%;
-      width: 100%;
-      justify-content: center;
-      flex-direction: column;
+    .industrious-filtro {
+      background-image: linear-gradient(to bottom right, rgba(203,27,40,.6) 0%, rgba(17,17,17,.9) 64%);
       color: white;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      justify-content: center;
       text-align: center;
+      width: 100%;
 
-        .industrious-title {
-          text-transform: uppercase;
-          font-size: 5em;
+        .industrious-titulo {
+          font-size: 3.8em;
           font-weight: normal;
           padding: 30px 0;
+          text-transform: uppercase;
         }
 
-        .industrious-subtitle {
-          font-size: 1.7em;
-          font-weight: normal;
+        .industrious-subtitulo {
           color: #9f9f9f;
+          font-size: 1.4em;
+          font-weight: normal;
+          line-height: 1.5em;
+
+          .industrious-templated {
+            text-transform: uppercase;
+
+            &:hover {
+              color: white;
+              transition: .5s;
+            }
+          }
         }
     }
 }
