--- a/css/scss/turpis.scss
+++ b/css/scss/turpis.scss
@@ -1,44 +1,45 @@
-.turpis_banner {
-  background-image: url(../img/parede_e_vidro.jpg);
+.turpis {
   background-attachment: fixed;
+  background-image: url(../img/parede_e_vidro.jpg);
   background-size: cover;
 
-  .turpis {
+  .turpis-filtro {
     background-color: rgba(255, 255, 255, .95);
-    width: 100%;
-    height: 100%;
-    opacity: 1;
     text-align: center;
-    color: #55555A;
 
-    .turpis-title {
-      font-size: 2em;
-      padding: 50px 0 30px 0;
+    .turpis-titulo {
+      font-size: 2.2em;
       font-weight: normal;
+      padding-top: 60px;
     }
-    .turpis-paragraph {
-      padding-bottom: 50px;
+    .turpis-paragrafo {
+      font-size: 1em;
+      padding: 40px 0;
     }
   }
 }
 
-.box-option {
-    box-shadow: 1px 1px 8px #e5e5e5;
-    background-color: white;
-    margin: 20px auto;
-    box-sizing: content-box;
+.lista-de-vantagem {
+  justify-content: space-between;
 
+  .vantagem {
+      background-color: white;
+      box-sizing: content-box;
+      box-shadow: 1px 1px 8px #e5e5e5;
+      margin: 20px 0;
+      padding: 70px 25px;
 
-    .option-icon {
-      font-size: 4.5em;
-      color: #CE1B28;
-      padding: 25px 0;
-    }
-    .option-subtitle {
-      font-weight: normal;
-    }
+      .vantagem-icone {
+        color: #CE1B28;
+        font-size: 4.5em;
+        padding: 25px 0;
+      }
+      .vantagem-subtitulo {
+        font-weight: normal;
+      }
 
-    .option-paragraph {
-      padding: 25px 0;
-    }
+      .vantagem-paragrafo {
+        padding: 25px 0;
+      }
+  }
 }
