--- a/css/style.css
+++ b/css/style.css
@@ -1,107 +1,138 @@
 .navbar {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
-  width: 100%;
-  padding: 20px 20px;
   background-color: black;
-  position: fixed;
-  z-index: 5;
-}
-.navbar .logo-principal {
-  font-size: 1.2em;
-}
-.navbar .logo-principal .logo {
-  color: white;
+  display: flex;
+  font-size: 1em;
   font-style: none;
+  justify-content: space-between;
+  padding: 15px 20px;
+  position: fixed;
   text-decoration: none;
+  z-index: 4;
+  width: 100%;
+}
+.navbar .navbar-logo-principal .navbar-logo {
+  color: white;
   font-weight: 600;
 }
-.navbar .active-menu {
-  color: white;
-  font-size: 1.1em;
-}
-.navbar .active-menu .menu {
+.navbar .navbar-menu-ativa {
   color: #9f9f9f;
-  font-style: none;
-  text-decoration: none;
-  font-weight: bold;
-  padding: 0 5px;
-  transition: 0.6s;
 }
-.navbar .active-menu .menu:hover {
+.navbar .navbar-menu-ativa .navbar-menu {
+  font-weight: bold;
+  transition: 0.5s;
+}
+.navbar .navbar-menu-ativa .navbar-menu:hover {
   color: white;
 }
-.navbar .active-menu .menu .fa-bars {
-  padding: 0 5px;
+.navbar .navbar-menu-ativa .navbar-menu .fa-bars {
+  padding: 0 10px;
 }
 
-.industrious_banner {
-  width: 100%;
-  height: 650px;
+.industrious {
   background-image: url(../img/cidade.jpg);
   background-size: cover;
-}
-.industrious_banner .industrious {
-  background-image: linear-gradient(to bottom right, rgba(203, 27, 40, 0.6) 0%, rgba(17, 17, 17, 0.9) 74%);
-  display: flex;
-  height: 100%;
+  height: 650px;
   width: 100%;
-  justify-content: center;
-  flex-direction: column;
-  color: white;
-  text-align: center;
 }
-.industrious_banner .industrious .industrious-title {
-  text-transform: uppercase;
-  font-size: 5em;
+.industrious .industrious-filtro {
+  background-image: linear-gradient(to bottom right, rgba(203, 27, 40, 0.6) 0%, rgba(17, 17, 17, 0.9) 64%);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+}
+.industrious .industrious-filtro .industrious-titulo {
+  font-size: 3.8em;
   font-weight: normal;
   padding: 30px 0;
+  text-transform: uppercase;
 }
-.industrious_banner .industrious .industrious-subtitle {
-  font-size: 1.7em;
-  font-weight: normal;
+.industrious .industrious-filtro .industrious-subtitulo {
   color: #9f9f9f;
+  font-size: 1.4em;
+  font-weight: normal;
+  line-height: 1.5em;
+}
+.industrious .industrious-filtro .industrious-subtitulo .industrious-templated {
+  text-transform: uppercase;
+}
+.industrious .industrious-filtro .industrious-subtitulo .industrious-templated:hover {
+  color: white;
+  transition: 0.5s;
 }
 
-.turpis_banner {
-  background-image: url(../img/parede_e_vidro.jpg);
+.turpis {
   background-attachment: fixed;
+  background-image: url(../img/parede_e_vidro.jpg);
   background-size: cover;
 }
-.turpis_banner .turpis {
+.turpis .turpis-filtro {
   background-color: rgba(255, 255, 255, 0.95);
-  width: 100%;
-  height: 100%;
-  opacity: 1;
   text-align: center;
-  color: #55555A;
 }
-.turpis_banner .turpis .turpis-title {
-  font-size: 2em;
-  padding: 50px 0 30px 0;
+.turpis .turpis-filtro .turpis-titulo {
+  font-size: 2.2em;
   font-weight: normal;
+  padding-top: 60px;
 }
-.turpis_banner .turpis .turpis-paragraph {
-  padding-bottom: 50px;
+.turpis .turpis-filtro .turpis-paragrafo {
+  font-size: 1em;
+  padding: 40px 0;
 }
 
-.box-option {
-  box-shadow: 1px 1px 8px #e5e5e5;
-  background-color: white;
-  margin: 20px auto;
-  box-sizing: content-box;
+.lista-de-vantagem {
+  justify-content: space-between;
 }
-.box-option .option-icon {
-  font-size: 4.5em;
+.lista-de-vantagem .vantagem {
+  background-color: white;
+  box-sizing: content-box;
+  box-shadow: 1px 1px 8px #e5e5e5;
+  margin: 20px 0;
+  padding: 70px 25px;
+}
+.lista-de-vantagem .vantagem .vantagem-icone {
   color: #CE1B28;
+  font-size: 4.5em;
   padding: 25px 0;
 }
-.box-option .option-subtitle {
+.lista-de-vantagem .vantagem .vantagem-subtitulo {
   font-weight: normal;
 }
-.box-option .option-paragraph {
+.lista-de-vantagem .vantagem .vantagem-paragrafo {
   padding: 25px 0;
+}
+
+.curabitur {
+  background-attachment: fixed;
+  background-image: url(../img/predio.jpg);
+  background-position: center;
+  width: 100%;
+}
+.curabitur .curabitur-filtro {
+  background-color: rgba(255, 0, 0, 0.2);
+  height: 100%;
+  width: 100%;
+  color: white;
+  padding: 50px;
+}
+.curabitur .curabitur-filtro .curabitur-texts {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.curabitur .curabitur-filtro .curabitur-texts .curabitur-subtitulo {
+  font-size: 2.2em;
+  font-weight: normal;
+  padding-top: 60px;
+}
+.curabitur .curabitur-filtro .curabitur-texts .curabitur-paragrafo {
+  font-size: 1em;
+  padding: 40px 0;
 }
 
 /*# sourceMappingURL=style.css.map */
