--- a/css/style.scss
+++ b/css/style.scss
@@ -2,4 +2,5 @@
 @import './scss/industrious';
 @import './scss/turpis';
 @import './scss/curabitur';
+@import './scss/faucibus';
 @import './scss/footer';
