--- a/css/scss/turpis.scss
+++ b/css/scss/turpis.scss
@@ -6,6 +6,7 @@
   .turpis-filtro {
     background-color: rgba(255, 255, 255, .95);
     text-align: center;
+    padding: 80px 0;
 
     .turpis-titulo {
       font-size: 2.2em;
