Footer pela metade

--- a/css/scss/industrious.scss
+++ b/css/scss/industrious.scss
@@ -29,6 +29,7 @@
 
           .industrious-templated {
             text-transform: uppercase;
+            cursor: pointer;
 
             &:hover {
               color: white;
