--- a/css/reset.css
+++ b/css/reset.css
@@ -16,7 +16,9 @@ body {
 
 ul { list-style: none }
 
-a { text-decoration: none }
+a { text-decoration: none;
+    color: #868686;;
+}
 
 textarea {
     resize: none;
