--- a/css/scss/curabitur.scss
+++ b/css/scss/curabitur.scss
@@ -2,22 +2,23 @@
   background-attachment: fixed;
   background-image: url(../img/predio.jpg);
   background-position: bottom;
-  width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
+  width: 100%;
 
   .curabitur-filtro {
     background-color: rgba(255, 0, 0, .2);
-    height: 100%;
-    width: 100%;
     color: white;
-    padding: 50px;
+    height: 100%;
+    padding: 70px 0;
+    width: 100%;
 
     .curabitur-texts {
-      display: flex;
-      justify-content: center;
       align-items: center;
+      display: flex;
       flex-direction: column;
+      line-height: 1.5em;
+      text-align: center;
 
       .curabitur-subtitulo {
         font-size: 2.2em;
