--- a/css/scss/footer.scss
+++ b/css/scss/footer.scss
@@ -3,12 +3,68 @@
   padding: 50px 0;
 
   .rotape-lista {
+    border-bottom: 1px;
+    border-color: #595959;
+    border-style: solid;
+    color: #868686;
+    font-size: 1.05sem;
+    line-height: 1.5em;
+    padding-bottom: 40px;
+
     .rotape-item {
        .rotape-subtitulo {
-         font-weight: 500;
-         font-size: 1.3em;
+         color: white;
+         font-weight: normal;
+         font-size: 1.2em;
          padding: 20px 0;
+         text-transform: uppercase;
        }
+    }
+  }
+
+  .rotape-copyright {
+    text-align: center;
+    padding: 25px 0;
+    font-size: .9em;
+  }
+}
+
+.rotape-lista-links {
+  .rotape-link {
+      border-bottom: 1px;
+      border-color: #595959;
+      border-style: solid;
+      padding: 15px 0;
+
+      &:last-child {
+        border: 0;
+      }
+
+     .rotape-link-texto {
+       &:hover {
+         color: #c10000;
+         transition: .5s;
+       }
+     }
+   }
+}
+
+.rotape-rede-social {
+  .rotape-rede-social-link {
+
+    &:hover {
+      color: #c10000;
+      transition: .5s;
+    }
+
+    .rotape-rede-social-icone {
+      background: black;
+      border-radius: 5px;
+      color: white;
+      margin: 7px;
+      padding: 10px 0;
+      text-align: center;
+      width: 35px;
     }
   }
 }
