--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,37 @@
   padding: 0 10px;
 }
 
+.ativa {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #111111;
+  width: 300px;
+  height: 100vw;
+  padding: 20px 20px;
+}
+.ativa .ativa-x {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 1.1em;
+  text-align: right;
+}
+.ativa .ativa-x:hover {
+  color: white;
+}
+.ativa .ativa-lista-links {
+  font-size: 0.9em;
+}
+.ativa .ativa-lista-links .ativa-link {
+  padding: 20px 0;
+  border-bottom: 1px;
+  border-color: #383838;
+  border-style: solid;
+}
+.ativa .ativa-lista-links .ativa-link .ativa-link-texto:hover {
+  color: white;
+}
+
 .industrious {
   background-image: url(../img/cidade.jpg);
   background-size: cover;
@@ -89,22 +120,21 @@
 .lista-de-vantagem {
   justify-content: space-between;
 }
-.lista-de-vantagem .vantagem {
+.lista-de-vantagem .vantagem-item {
   background-color: white;
-  box-sizing: content-box;
   box-shadow: 1px 1px 8px #e5e5e5;
   margin: 20px 0;
-  padding: 70px 25px;
+  padding: 50px 40px;
 }
-.lista-de-vantagem .vantagem .vantagem-icone {
+.lista-de-vantagem .vantagem-item .vantagem-icone {
   color: #CE1B28;
   font-size: 4.5em;
   padding: 25px 0;
 }
-.lista-de-vantagem .vantagem .vantagem-subtitulo {
+.lista-de-vantagem .vantagem-item .vantagem-subtitulo {
   font-weight: normal;
 }
-.lista-de-vantagem .vantagem .vantagem-paragrafo {
+.lista-de-vantagem .vantagem-item .vantagem-paragrafo {
   padding: 25px 0;
 }
 
@@ -112,22 +142,23 @@
   background-attachment: fixed;
   background-image: url(../img/predio.jpg);
   background-position: bottom;
-  width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
+  width: 100%;
 }
 .curabitur .curabitur-filtro {
   background-color: rgba(255, 0, 0, 0.2);
-  height: 100%;
-  width: 100%;
   color: white;
-  padding: 50px;
+  height: 100%;
+  padding: 70px 0;
+  width: 100%;
 }
 .curabitur .curabitur-filtro .curabitur-texts {
-  display: flex;
-  justify-content: center;
   align-items: center;
+  display: flex;
   flex-direction: column;
+  line-height: 1.5em;
+  text-align: center;
 }
 .curabitur .curabitur-filtro .curabitur-texts .curabitur-subtitulo {
   font-size: 2.2em;
@@ -156,7 +187,7 @@
 }
 .faucibus .faucibus-filtro .faucibus-paragrafo {
   font-size: 1em;
-  padding: 40px 0;
+  padding: 40px 0 60px 0;
 }
 
 .faucibus-lista-avaliacao {
@@ -164,10 +195,9 @@
 }
 .faucibus-lista-avaliacao .faucibus-avaliacao {
   background-color: white;
-  box-sizing: content-box;
   box-shadow: 1px 1px 8px #e5e5e5;
+  padding: 50px 50px;
   margin: 20px 0;
-  padding: 40px 25px;
   position: relative;
 }
 .faucibus-lista-avaliacao .faucibus-avaliacao .faucibus-avaliacao-text {
@@ -183,30 +213,74 @@
   font-size: 1.05em;
 }
 .faucibus-lista-avaliacao .faucibus-avaliacao .faucibus-avaliacao-pessoa {
-  display: flex;
   align-items: center;
+  display: flex;
   justify-content: space-evenly;
 }
 .faucibus-lista-avaliacao .faucibus-avaliacao .faucibus-avaliacao-pessoa .faucibus-pessoa-imagem {
-  height: 65px;
   border-radius: 50%;
+  height: 55px;
 }
 .faucibus-lista-avaliacao .faucibus-avaliacao .faucibus-avaliacao-pessoa .faucibus-pessoa-paragrafo {
-  font-size: 0.875em;
+  font-size: 0.8em;
 }
 .faucibus-lista-avaliacao .faucibus-avaliacao .faucibus-avaliacao-pessoa .faucibus-pessoa-paragrafo .faucibus-pessoa-paragrafo-destaque {
+  color: #c10000;
   font-weight: 600;
-  color: red;
 }
 
 .rotape {
   background-color: #111111;
   padding: 50px 0;
 }
+.rotape .rotape-lista {
+  border-bottom: 1px;
+  border-color: #595959;
+  border-style: solid;
+  color: #868686;
+  font-size: 1.05sem;
+  line-height: 1.5em;
+  padding-bottom: 40px;
+}
 .rotape .rotape-lista .rotape-item .rotape-subtitulo {
-  font-weight: 500;
-  font-size: 1.3em;
+  color: white;
+  font-weight: normal;
+  font-size: 1.2em;
   padding: 20px 0;
+  text-transform: uppercase;
+}
+.rotape .rotape-copyright {
+  text-align: center;
+  padding: 25px 0;
+  font-size: 0.9em;
+}
+
+.rotape-lista-links .rotape-link {
+  border-bottom: 1px;
+  border-color: #595959;
+  border-style: solid;
+  padding: 15px 0;
+}
+.rotape-lista-links .rotape-link:last-child {
+  border: 0;
+}
+.rotape-lista-links .rotape-link .rotape-link-texto:hover {
+  color: #c10000;
+  transition: 0.5s;
+}
+
+.rotape-rede-social .rotape-rede-social-link:hover {
+  color: #c10000;
+  transition: 0.5s;
+}
+.rotape-rede-social .rotape-rede-social-link .rotape-rede-social-icone {
+  background: black;
+  border-radius: 5px;
+  color: white;
+  margin: 7px;
+  padding: 10px 0;
+  text-align: center;
+  width: 35px;
 }
 
 /*# sourceMappingURL=style.css.map */
