--- a/css/scss/curabitur.scss
+++ b/css/scss/curabitur.scss
@@ -10,7 +10,7 @@
     background-color: rgba(255, 0, 0, .2);
     color: white;
     height: 100%;
-    padding: 70px 0;
+    padding: 10px 0;
     width: 100%;
 
     .curabitur-texts {
@@ -19,11 +19,13 @@
       flex-direction: column;
       line-height: 1.5em;
       text-align: center;
+      padding: 0 15px;
 
       .curabitur-subtitulo {
         font-size: 2.2em;
         font-weight: normal;
         padding-top: 60px;
+        line-height: 1.3em;
       }
       .curabitur-paragrafo {
         font-size: 1em;
