--- a/css/scss/industrious.scss
+++ b/css/scss/industrious.scss
@@ -1,7 +1,7 @@
 .industrious {
   background-image: url(../img/cidade.jpg);
   background-size: cover;
-  height: 650px;
+  height: 550px;
   width: 100%;
 
     .industrious-filtro {
@@ -9,6 +9,7 @@
       color: white;
       display: flex;
       flex-direction: column;
+      font-family: Raleway Light;
       height: 100%;
       justify-content: center;
       text-align: center;
@@ -24,8 +25,9 @@
         .industrious-subtitulo {
           color: #9f9f9f;
           font-size: 1.4em;
-          font-weight: normal;
+          font-weight: 600;
           line-height: 1.5em;
+          padding: 0 15px;
 
           .industrious-templated {
             text-transform: uppercase;
