--- a/css/scss/curabitur.scss
+++ b/css/scss/curabitur.scss
@@ -1,3 +1,5 @@
+@import './variaveis.scss';
+
 .curabitur {
   background-attachment: fixed;
   background-image: url(../img/predio.jpg);
@@ -7,8 +9,8 @@
   width: 100%;
 
   .curabitur-filtro {
-    background-color: rgba(255, 0, 0, .2);
-    color: white;
+    background-color: rgba($cor-red, .2);
+    color: $cor-branco;
     height: 100%;
     padding: 10px 0;
     width: 100%;
@@ -18,14 +20,15 @@
       display: flex;
       flex-direction: column;
       line-height: 1.5em;
-      text-align: center;
       padding: 0 15px;
+      text-align: center;
 
       .curabitur-subtitulo {
         font-size: 2.2em;
         font-weight: normal;
-        padding-top: 60px;
         line-height: 1.3em;
+        padding-top: 60px;
+        text-transform: uppercase;
       }
       .curabitur-paragrafo {
         font-size: 1em;
