--- a/css/scss/turpis.scss
+++ b/css/scss/turpis.scss
@@ -1,41 +1,43 @@
+@import './variaveis.scss';
+@import './mixin.scss';
+
 .turpis {
   background-attachment: fixed;
   background-image: url(../img/parede_e_vidro.jpg);
   background-size: cover;
 
   .turpis-filtro {
-    background-color: rgba(255, 255, 255, .95);
+    background-color: rgba($cor-branco, .95);
+    padding: 20px 0;
     text-align: center;
-    padding: 80px 0;
 
-    .turpis-titulo {
-      font-size: 2.2em;
-      font-weight: normal;
-      padding-top: 60px;
+    .turpis-subtitulo {
+      @include subtitulo;
     }
     .turpis-paragrafo {
-      font-size: 1em;
-      padding: 40px 0;
+      @include paragrafo;
     }
   }
 }
 
 .lista-de-vantagem {
   justify-content: space-between;
+  padding: 0 20px;
 
   .vantagem-item {
-      background-color: white;
-      box-shadow: 1px 1px 8px #e5e5e5;
+      background-color: $cor-branco;
+      box-shadow: 1px 1px 8px $cor-branco-escuro;
       margin: 20px 0;
       padding: 50px 40px;
 
       .vantagem-icone {
-        color: #CE1B28;
+        color: $cor-red-escuro;
         font-size: 4.5em;
         padding: 25px 0;
       }
       .vantagem-subtitulo {
         font-weight: normal;
+        text-transform: uppercase;
       }
 
       .vantagem-paragrafo {
