--- a/css/reset.css
+++ b/css/reset.css
@@ -1,25 +1,29 @@
 * {
-    border: 0;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    outline: none;
+  border: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  outline: none;
 }
 
 html,
 body {
-    font-size: 100%;
-    font-family: 'Raleway';
-    min-height: 100vh;
-    color: #55555A;
+  font-family: "Josefin Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f5f7fa;
+  color: #333;
 }
 
-ul { list-style: none }
+ul {
+  list-style: none;
+}
 
-a { text-decoration: none;
-    color: #868686;;
+a {
+  text-decoration: none;
+  color: #868686;
 }
 
 textarea {
-    resize: none;
+  resize: none;
 }
