--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,62 @@
-.navbar {
-  align-items: center;
-  background-color: #111111;
-  display: flex;
-  font-size: 1em;
-  font-style: none;
-  justify-content: space-between;
-  padding: 15px 20px;
-  position: fixed;
-  text-decoration: none;
-  z-index: 4;
+.container {
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  background-color: #2c3e50;
+  color: #fff;
+  position: fixed;
+  width: 100%;
+  z-index: 4;
 }
 .navbar .navbar-logo {
-  color: white;
-  font-weight: 600;
+  font-size: 1.3rem;
+  font-weight: bold;
+  color: #fff;
+  text-decoration: none;
 }
 .navbar .navbar-menu {
+  color: #fff;
   cursor: pointer;
   font-weight: 600;
   transition: 0.5s;
 }
 .navbar .navbar-menu:hover {
-  color: white;
+  color: #bfbfbf;
 }
 .navbar .sidebar-lista-links .sidebar-link {
   border-bottom: 1px;
-  border-color: #868686;
+  border-color: #fff;
   border-style: solid;
   padding: 20px 0px;
 }
@@ -34,13 +65,14 @@
 }
 .navbar .sidebar-lista-links .sidebar-link .sidebar-link-texto {
   transition: 0.5s;
+  color: #fff;
 }
 .navbar .sidebar-lista-links .sidebar-link .sidebar-link-texto:hover {
   color: white;
 }
 
 .sidebar {
-  background-color: black;
+  background-color: #2c3e50;
   height: 100%;
   padding: 20px 20px;
   position: fixed;
@@ -58,7 +90,7 @@
   font-size: 1.2em;
 }
 .sidebar .btn-close .btn-close-icon:hover {
-  color: white;
+  color: #fff;
   transition: 0.5s;
 }
 .sidebar.closed {
@@ -72,11 +104,14 @@
   width: 100%;
 }
 .industrious .industrious-filtro {
-  background-image: linear-gradient(to bottom right, rgba(203, 27, 40, 0.6) 0%, rgba(17, 17, 17, 0.9) 64%);
+  background-image: linear-gradient(
+    to bottom right,
+    rgba(203, 27, 40, 0.6) 0%,
+    rgba(17, 17, 17, 0.9) 64%
+  );
   color: white;
   display: flex;
   flex-direction: column;
-  font-family: Raleway Light;
   height: 100%;
   justify-content: center;
   text-align: center;
@@ -91,7 +126,7 @@
 .industrious .industrious-filtro .industrious-subtitulo {
   color: #9f9f9f;
   font-size: 1.4em;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.5em;
   padding: 0 15px;
 }
@@ -99,7 +134,10 @@
   cursor: pointer;
   text-transform: uppercase;
 }
-.industrious .industrious-filtro .industrious-subtitulo .industrious-templated:hover {
+.industrious
+  .industrious-filtro
+  .industrious-subtitulo
+  .industrious-templated:hover {
   color: white;
   transition: 0.5s;
 }
@@ -109,42 +147,58 @@
   background-image: url(../img/parede_e_vidro.jpg);
   background-size: cover;
 }
-.turpis .turpis-filtro {
+
+.turpis-filtro {
   background-color: rgba(255, 255, 255, 0.95);
   padding: 20px 0;
   text-align: center;
 }
-.turpis .turpis-filtro .turpis-subtitulo {
+
+.turpis-subtitulo {
   font-size: 2.2em;
   font-weight: normal;
   padding: 60px 20px 0 20px;
   text-transform: uppercase;
 }
-.turpis .turpis-filtro .turpis-paragrafo {
+
+.turpis-paragrafo {
   font-size: 1em;
   padding: 30px 20px 50px 20px;
 }
 
 .lista-de-vantagem {
-  justify-content: space-between;
-  padding: 0 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  margin-bottom: 70px;
 }
-.lista-de-vantagem .vantagem-item {
+
+.lista-item {
+  width: 350px;
+  min-height: 150px;
+}
+
+.vantagem-item {
   background-color: white;
   box-shadow: 1px 1px 8px #e5e5e5;
-  margin: 20px 0;
-  padding: 50px 40px;
+  padding: 50px 20px;
+  height: 100%;
 }
-.lista-de-vantagem .vantagem-item .vantagem-icone {
+
+.vantagem-icone {
   color: #c10000;
-  font-size: 4.5em;
-  padding: 25px 0;
+  font-size: 3em;
+  padding: 10px;
+  margin-bottom: 10px;
 }
-.lista-de-vantagem .vantagem-item .vantagem-subtitulo {
+
+.vantagem-subtitulo {
   font-weight: normal;
   text-transform: uppercase;
 }
-.lista-de-vantagem .vantagem-item .vantagem-paragrafo {
+
+.vantagem-paragrafo {
   padding: 25px 0;
 }
 
@@ -156,14 +210,16 @@
   background-size: cover;
   width: 100%;
 }
-.curabitur .curabitur-filtro {
+
+.curabitur-filtro {
   background-color: rgba(255, 0, 0, 0.2);
   color: white;
   height: 100%;
   padding: 10px 0;
   width: 100%;
 }
-.curabitur .curabitur-filtro .curabitur-texts {
+
+.curabitur-texts {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -171,124 +227,168 @@
   padding: 0 15px;
   text-align: center;
 }
-.curabitur .curabitur-filtro .curabitur-texts .curabitur-subtitulo {
+
+.curabitur-subtitulo {
   font-size: 2.2em;
   font-weight: normal;
   line-height: 1.3em;
   padding-top: 60px;
   text-transform: uppercase;
 }
-.curabitur .curabitur-filtro .curabitur-texts .curabitur-paragrafo {
+
+.curabitur-paragrafo {
   font-size: 1em;
   padding: 40px 0;
 }
 
-.faucibus {
+.testimony {
   background-attachment: fixed;
   background-image: url(../img/parede_e_vidro.jpg);
   background-size: cover;
 }
-.faucibus .faucibus-filtro {
+
+.testimony .testimony-content {
   background-color: rgba(255, 255, 255, 0.95);
-  padding: 20px 0;
+  padding: 60px 20px;
   text-align: center;
 }
-.faucibus .faucibus-filtro .faucibus-subtitulo {
+
+.testimony .testimony-title {
   font-size: 2.2em;
   font-weight: normal;
   padding: 60px 20px 0 20px;
   text-transform: uppercase;
 }
-.faucibus .faucibus-filtro .faucibus-paragrafo {
+
+.testimony .testimony-paragraph {
   font-size: 1em;
   padding: 30px 20px 50px 20px;
 }
 
-.faucibus-lista-avaliacao {
-  justify-content: space-between;
-  padding: 0 20px 50px 20px;
+.testimony .testimony-row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  margin-bottom: 70px;
 }
-.faucibus-lista-avaliacao .faucibus-avaliacao {
+
+.testimony .testimony-item {
+  width: 350px;
+}
+
+.testimony .testimony-assessment {
+  height: 100%;
   background-color: white;
   box-shadow: 1px 1px 8px #e5e5e5;
-  margin: 20px 0;
-  padding: 50px 50px;
+  padding: 20px;
   position: relative;
 }
-.faucibus-lista-avaliacao .faucibus-avaliacao .faucibus-avaliacao-text {
-  border-left: 7px;
-  border-color: #bfbfbf;
+
+.testimony .testimony-assessment-text {
+  display: flex;
+  align-items: center;
+  border-left: 4px;
+  border-color: #e5e5e5;
   border-style: solid;
   margin: 20px 0;
-  padding: 20px 0 20px 20px;
+  padding: 20px;
   text-align: left;
+  min-height: 130px;
 }
-.faucibus-lista-avaliacao .faucibus-avaliacao .faucibus-avaliacao-text .faucibus-avaliacao-paragrafo {
-  font-style: italic;
-  font-size: 1.05em;
-}
-.faucibus-lista-avaliacao .faucibus-avaliacao .faucibus-avaliacao-pessoa {
+
+.testimony .testimony-assessment-photo {
   align-items: center;
   display: flex;
   justify-content: space-evenly;
 }
-.faucibus-lista-avaliacao .faucibus-avaliacao .faucibus-avaliacao-pessoa .faucibus-pessoa-imagem {
+
+.testimony .testimony-assessment-photo-img {
+  border: 2px solid #c10000;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  height: 55px;
+  height: 50px;
 }
-.faucibus-lista-avaliacao .faucibus-avaliacao .faucibus-avaliacao-pessoa .faucibus-pessoa-paragrafo {
+
+.testimony .testimony-assessment-paragraph {
   font-size: 0.8em;
 }
-.faucibus-lista-avaliacao .faucibus-avaliacao .faucibus-avaliacao-pessoa .faucibus-pessoa-paragrafo .faucibus-pessoa-paragrafo-destaque {
+
+.testimony .testimony-assessment-paragraph span {
   color: #c10000;
   font-weight: 600;
 }
 
+/* ROTAPE */
+
 .rotape {
-  background-color: #111111;
+  background: #2c3e50;
+  color: #ccc;
   padding: 50px 20px;
 }
-.rotape .rotape-lista {
+
+.rotape-row {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 20px;
   border-bottom: 1px;
   border-color: #595959;
   border-style: solid;
   color: #868686;
-  font-size: 1.05sem;
+  font-size: 1.03em;
   line-height: 1.5em;
   padding-bottom: 40px;
 }
-.rotape .rotape-lista .rotape-item .rotape-subtitulo {
-  color: white;
-  font-weight: normal;
-  font-size: 1.2em;
+
+@media (max-width: 768px) {
+  .rotape-row {
+    flex-direction: column;
+  }
+}
+
+.rotape-item {
+  flex: 1;
+}
+
+.rotape-subtitulo {
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.1em;
   padding: 20px 0;
   text-transform: uppercase;
 }
-.rotape .rotape-copyright {
+
+.rotape-copyright {
   font-size: 0.9em;
   padding: 25px 0;
   text-align: center;
+  color: #fff;
 }
 
-.rotape-lista-links .rotape-link {
+.rotape-link {
   border-bottom: 1px;
   border-color: #595959;
   border-style: solid;
   padding: 15px 0;
 }
-.rotape-lista-links .rotape-link:last-child {
+
+.rotape-link:last-child {
   border: 0;
 }
-.rotape-lista-links .rotape-link .rotape-link-texto:hover {
-  color: #c10000;
-  transition: 0.5s;
+
+.rotape-link-texto,
+.rotape-rede-social-link {
+  color: #ccc;
+  transition: 0.3s;
 }
 
-.rotape-rede-social .rotape-rede-social-link:hover {
+.rotape-link-texto:hover,
+.rotape-rede-social-link:hover {
   color: #c10000;
-  transition: 0.5s;
 }
-.rotape-rede-social .rotape-rede-social-link .rotape-rede-social-icone {
+
+.rotape-rede-social-icone {
   background: black;
   border-radius: 5px;
   color: white;
